--- a/server/package.json
+++ b/server/package.json
@@ -12,17 +12,21 @@
   "license": "ISC",
   "dependencies": {
     "auth0": "^4.2.0",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-jwt": "^8.4.1",
     "express-oauth2-jwt-bearer": "^1.6.0",
+    "express-session": "^1.17.3",
     "jwks-rsa": "^3.1.0",
     "mongodb": "^6.3.0"
   },
   "devDependencies": {
+    "@types/cookie-parser": "^1.4.6",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/express-session": "^1.17.10",
     "@types/node": "^20.10.1",
     "typescript": "^5.3.2",
     "vite": "^4.5.0",
