--- a/server/package.json
+++ b/server/package.json
@@ -20,7 +20,8 @@
     "express-oauth2-jwt-bearer": "^1.6.0",
     "express-session": "^1.17.3",
     "jwks-rsa": "^3.1.0",
-    "mongodb": "^6.3.0"
+    "mongodb": "^6.3.0",
+    "mongoose": "^8.0.3"
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.6",
