--- a/client/package.json
+++ b/client/package.json
@@ -15,7 +15,8 @@
     "auth0": "^4.2.0",
     "react": "^18.2.0",
     "react-cookie": "^6.1.1",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.21.0"
   },
   "devDependencies": {
     "@types/auth0-js": "^9.21.5",
