--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "react": "^18.2.0",
     "react-cookie": "^6.1.1",
     "react-dom": "^18.2.0",
+    "react-query-devtools": "^2.6.3",
     "react-router-dom": "^6.21.0"
   },
   "devDependencies": {
