--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@firebase/app": "^0.9.26",
+    "@firebase/storage": "^0.12.0",
     "auth0": "^4.2.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
