--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "@firebase/app": "^0.9.26",
     "@firebase/storage": "^0.12.0",
     "auth0": "^4.2.0",
+    "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
